--- a/comingsoon.html
+++ b/comingsoon.html
@@ -10,8 +10,7 @@
     <!-- Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Cormorant+Garamond:ital,wght@0,300;1,300&family=Montserrat:wght@100&family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <!-- gLightbox CSS-->
     <link rel="stylesheet" href="vendor/glightbox/css/glightbox.min.css">
     <!-- theme stylesheet-->
@@ -36,9 +35,6 @@
           </div>
           <div class="col-6">
             <div class="row text-center">
-              <p>est 2021</p>
-            </div>
-            <div class="row text-center">
               <a class="logo logo-font" href="index.html">Details by Cyn</a>
             </div>
           </div>
@@ -58,6 +54,9 @@
           <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
+              <li class="nav-item text-center">
+                <!-- Navbar link--><a class="nav-link active" href="comingsoon.html">Coming Soon</a>
+              </li>
               <li class="nav-item text-center">
                 <!-- Navbar link--><a class="nav-link active" href="index.html">Home</a>
               </li>
@@ -81,28 +80,26 @@
     <!-- Main post-->
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4">
+        <div class="row row-sm-3">
+          <div class="col coming-soon">
+            <div class="mt-3 row row-sm-3">
+              <h1>Coming Soon</h1>
+            </div>
+            <div class="row row-sm-3">
+              <h3>Stay Tuned!</h3>
+            </div>
+            <div class="row mb-5">
+              <a href="/"><button class="bn30">Notify Me</button></a>
+            </div>
+          </div>
 
+        </div>
+          <div class="col">
+            
+
+          </div>
       </div>
     </div>
-    </section>
-    <!-- Instagram items-->
-    <section><a class="instagram-section-title d-none d-sm-block" href="https://www.instagram.com/glampingbycyn/" target="_blank"><i class="fab fa-instagram me-2"></i>Follow us: @glampingbycyn</a>
-      <div class="container-fluid px-0">
-        <div class="row">
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CZsGd7tFmUL/" target="_blank"><img class="img-instagram" src="img/HD-photos/add-on5.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CVde2hQFZHE/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients2.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent3.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients3.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent11.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-instagram" src="img/HD-photos/inside-tent1.jpeg" alt="...">
-              <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-        </div>
-      </div>
     </section>
     <footer class="py-4" style="background: #111">
       <div class="container text-center">
