--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -77,7 +77,7 @@
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
         <h3 class="text-center logo-font pt-5">Glamping</h3>
-        < class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
+        <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
           <div class="carousel-indicators">
               <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
               <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
