--- a/backyard-glamping.html
+++ b/backyard-glamping.html
@@ -76,81 +76,62 @@
     </header>
     <section class="pb-0">
       <div class="container-fluid px-0 pnb-4" style="background-color: rgba(233, 202, 163, 0.29);">
-        <h3 class="text-center logo-font pt-5">Glamping</h3>
-        <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
-          <div class="carousel-indicators">
-              <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
-              <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
-              <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
-          </div>
-          <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
-              </div>
-              <div class="carousel-item ">
-                  <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
-              </div>
-              <div class="carousel-item ">
-                  <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
-              </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-          </button>
-        <\\
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      '//''
         <div class="row">
-          <h5>Includes</h5>
-          <ul class="px-5">
-            <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-            <li>Queen memory foam bed</li>
-            <li>Decor, rugs and throw pillows  </li>
-            <li>Side table</li>
-            <li>Small trash can </li>
-            <li>Hand sanitizer </li>
-            <li>Outdoor/indoor lighting</li>
-            <li>Custom letter board announcement</li>
-            <li>Board game</li>
-            <li>Set and pick up is all included</li>
-          </ul>
-          <h5>Price</h5>
-          <p>$450 a night<sup>*</sup> </p>
-          <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
-        </div>
-        <div class="row " style="background-color: rgb(248, 240, 230);">
-          <div class="col d-flex justify-content-center mt-5 mb-5">
-            <button type="button" class="btn btn-design">Book Now</button>
+          <div class="col-12 d-flex justify-content-center">
+            <div class="carousel slide" data-bs-ride="carousel" id="carouselHeader">
+              <div class="carousel-indicators">
+                  <button class="active" type="button" data-bs-target="#carouselHeader" data-bs-slide-to="0" current="true" aria-label="Lounge 1"></button>
+                  <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="1" aria-label="Lounge 2"></button>
+                  <button type="button" data-bs-target="#carouselHeader" data-bs-slide-to="2" aria-label="Lounge 3"></button>
+              </div>
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img src="./img/HD-photos/add-on5.jpeg" alt="lounge 1" class="d-block w-100">
+                  </div>
+                  <div class="carousel-item ">
+                      <img src="./img/HD-photos/glamp-tent.jpeg" alt="lounge 2" class="d-block w-100">
+                  </div>
+                  <div class="carousel-item ">
+                      <img src="./img/HD-photos/glamp-tent3.jpeg" alt="lounge 3" class="d-block w-100">
+                  </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselHeader" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselHeader" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+              </button>
+            </div>
           </div>
+          <div class="col-12">
+            <h3 class=" text-center logo-font pt-5">Glamping</h3>
+          </div>
+          <div class="col-12 description">
+            <h5>Includes</h5>
+            <ul class="px-5">
+              <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
+              <li>Queen memory foam bed</li>
+              <li>Decor, rugs and throw pillows  </li>
+              <li>Side table</li>
+              <li>Small trash can </li>
+              <li>Hand sanitizer </li>
+              <li>Outdoor/indoor lighting</li>
+              <li>Custom letter board announcement</li>
+              <li>Board game</li>
+              <li>Set and pick up is all included</li>
+            </ul>
+            <h5>Price</h5>
+            <p>$450 a night<sup>*</sup> </p>
+            <p style="font-size: small;"><sup>*</sup>25% due at time of booking; remaining balance due 1 week prior to your desired day </p>
+          </div>
+          <div class="col-12 " style="background-color: rgb(248, 240, 230);">
+            <div class="col d-flex justify-content-center mt-5 mb-5">
+              <button type="button" class="btn btn-design">Book Now</button>
+            </div>
+          </div>
+
         </div>
       </div>
 
